--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <title>Website Hamburger</title>
 </head>
 <body>
+    <!-- navbar -->
      <nav class="navbar">
          <div class="navbar-logo">
-             <a href=""><img src="img/logo.png"></a>
+             <a href=""><img src="img/logo.png" draggable="false"></a>
          </div>
          <div class="navbar-nav-link">
              <a href="#home">Home</a>
@@ -27,6 +28,29 @@
              <a href="#"><img src="foto/user.png" alt=""></a>
          </div>
      </nav>
+
+     <!-- first content -->
+     <div class="teks-brand">
+        <div class="teks">
+            <div class="stars">
+                <i data-feather="star"></i>
+                <i data-feather="star"></i>
+                <i data-feather="star"></i>
+                <i data-feather="star"></i>
+                <i data-feather="star"></i>
+            </div>
+            <h1>Beef Burger</h1>
+            <p>
+                Indulge in the extraordinary deliciousness of our burgers<br>
+                and savor an unparalleled culinary experience. Each bite is<br>
+                a mesmerizing journey of flavors that captivates the palate.
+            </p>
+            <button>Order now</button>
+        </div>
+        <div class="brand">
+            <img src="img/burger.png" draggable="false">
+        </div>
+     </div>
 
     <script src="script.js"></script>
     <script>
