--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
              <a href=""><img src="img/logo.png" draggable="false"></a>
          </div>
          <div class="navbar-nav-link">
-             <a href="#home">Home</a>
-             <a href="aboutme.html">About Me</a>
-             <a href="skills.html">Skills</a>
-             <a href="portofolio.html">Portofolio</a>
-             <a href="contact.html">Contact</a>
+             <a href="">Home</a>
+             <a href="">About Us</a>
+             <a href="">Menus</a>
+             <a href="">Gallery</a>
+             <a href="">Contact</a>
          </div>
          <div class="navbar-extra">
              <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
